# NOMI-emoji

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h
src/: main.c  nomi_eyes.c  nomi_eyes.h
tools/: build.cmd  build.ps1  run.cmd  run.ps1  zigar.cmd  zigcc.cmd  zigcxx.cmd  zigranlib.cmd
